--- a/app/app.css
+++ b/app/app.css
@@ -3,6 +3,27 @@
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --color-primary: #fff;
+  --color-primary-foreground: #000;
+  --color-card-background: #303030;
+  --color-muted: #afafaf;
+  --color-background: #212121;
+  --color-sidebar-background: #171717;
+  --color-border: #ffffff26;
+}
+
+@layer base {
+  :root {
+    color-scheme: light dark;
+  }
+
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-border, currentColor);
+  }
 }
 
 html,
