feat: use textarea instead of input and improve ui

--- a/app/app.css
+++ b/app/app.css
@@ -34,3 +34,9 @@ body {
     color-scheme: dark;
   }
 }
+
+.field-sizing-content {
+  resize: none;
+  field-sizing: content;
+  overflow: hidden;
+}
